--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
-/* Header */
+/* Main */
 hr {
     border-width: 4px;
+}
+
+/* Header */
+.header-title {
+    text-align: right;
 }
 
 /* Logo */
@@ -9,6 +14,27 @@ hr {
 }
 
 /* Featured Work */
+.featured-work-title {
+    text-align: left;
+}
+
 .featured-work-img {
     margin: 0 auto;
+}
+
+@media screen and (max-width: 991px) {
+    /* Header */
+    .header-title {
+        text-align: center;
+    }
+
+    /* Logo */
+    .logo {
+        margin: 5px auto;
+    }
+
+    /* Featured Work */
+    .featured-work-title {
+        text-align: center;
+    }
 }
