--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ hr {
 }
 
 /* Header */
-.header-title {
+.header-titles {
     text-align: right;
 }
 
@@ -23,8 +23,15 @@ hr {
 }
 
 @media screen and (max-width: 991px) {
+    /* Featured Work */
+    .featured-work-title {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 767px) {
     /* Header */
-    .header-title {
+    .header-titles {
         text-align: center;
     }
 
@@ -33,8 +40,8 @@ hr {
         margin: 5px auto;
     }
 
-    /* Featured Work */
-    .featured-work-title {
-        text-align: center;
+    /* Banner */
+    .banner {
+        display: none;
     }
 }
