--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /* Main */
+body {
+    color: #747704;
+}
+
 hr {
     border-width: 4px;
 }
@@ -6,6 +10,7 @@ hr {
 /* Header */
 .header-titles {
     text-align: right;
+    text-transform: uppercase;
 }
 
 /* Logo */
